--- a/wiki/encyclopedia/templates/encyclopedia/new_page.html
+++ b/wiki/encyclopedia/templates/encyclopedia/new_page.html
@@ -9,7 +9,7 @@
 
     <form action="{% url 'wiki:new_page' %}" method="post">
         {% csrf_token %}
-        <input class="search" type="text" name="title" placeholder="Enter title">
+        <input type="text" name="title" placeholder="Enter title">
         <textarea name="content"></textarea>
         <input type="submit" value="Create New Page">
     </form>
