--- a/wiki/encyclopedia/templates/encyclopedia/new_page.html
+++ b/wiki/encyclopedia/templates/encyclopedia/new_page.html
@@ -9,9 +9,16 @@
 
     <form action="{% url 'wiki:new_page' %}" method="post">
         {% csrf_token %}
-        <input type="text" name="title" placeholder="Enter title">
-        <textarea name="content"></textarea>
-        <input type="submit" value="Create New Page">
+        <div class="mb-3">
+            <label  for="entry_title" class="form-label">Enter Title</label>
+            <input name="title" required type="text" class="form-control" id="title" placeholder="Coding">
+        </div>
+        <div class="mb-3">
+            <label for="entry_content" class="form-label">Content (Markdown)</label>
+            <textarea name="entry_content" required class="form-control" id="content" rows="6" placeholder="Coding is ..."></textarea>
+        </div>
+        
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
     
 
