--- a/mail/mail/templates/mail/inbox.html
+++ b/mail/mail/templates/mail/inbox.html
@@ -12,10 +12,11 @@
     <hr>
 
     <div id="emails-view">
+        <h3>TEST</h3>
     </div>
 
     <div id="compose-view">
-        <h3>New Email</h3>
+        <h3>New Email TEST</h3>
         <form id="compose-form">
             <div class="form-group">
                 From: <input disabled class="form-control" value="{{ request.user.email }}">
@@ -30,6 +31,8 @@
             <input type="submit" class="btn btn-primary"/>
         </form>
     </div>
+
+
 {% endblock %}
 
 {% block script %}
