--- a/webproject/tripnavigator/templates/tripnavigator/ai_chat.html
+++ b/webproject/tripnavigator/templates/tripnavigator/ai_chat.html
@@ -4,7 +4,7 @@
 {% block title %}Ask AI - Chat{% endblock %}
 
 {% block css %}
-  <link rel="stylesheet" href="{% static 'tripnavigator/ai_chat.css' %}">
+  <link rel="stylesheet" href="{% static 'tripnavigator/css/ai_chat.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -58,5 +58,5 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   
   <!-- Ekstern JavaScript-fil -->
-  <script src="{% static 'tripnavigator/ai_chat.js' %}"></script>
+  <script src="{% static 'tripnavigator/js/ai_chat.js' %}"></script>
 {% endblock %}
