--- a/webproject/tripnavigator/templates/tripnavigator/hotel.html
+++ b/webproject/tripnavigator/templates/tripnavigator/hotel.html
@@ -4,7 +4,7 @@
 {% block title %}Hotels{% endblock %}
 
 {% block script %}
-  <script src="{% static 'tripnavigator/hotel.js' %}"></script>
+  <script src="{% static 'tripnavigator/js/hotel.js' %}"></script>
 {% endblock %}
 
 {% block header_wrapper %}
