--- a/webproject/tripnavigator/templates/tripnavigator/layout.html
+++ b/webproject/tripnavigator/templates/tripnavigator/layout.html
@@ -8,13 +8,13 @@
   
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="{% static 'tripnavigator/styles.css' %}" rel="stylesheet">
+  <link href="{% static 'tripnavigator/css/styles.css' %}" rel="stylesheet">
   
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-  <link href="{% static 'tripnavigator/index-animations.css' %}" rel="stylesheet">
-  <link href="{% static 'tripnavigator/layout-animations.css' %}" rel="stylesheet">
-  <script src="{% static 'tripnavigator/index.js' %}"></script>
+  <link href="{% static 'tripnavigator/css/animations.css' %}" rel="stylesheet">
+  <link href="{% static 'tripnavigator/css/layout-animations.css' %}" rel="stylesheet">
+  <script src="{% static 'tripnavigator/js/animations.js' %}"></script>
   {% block css %}{% endblock %}
   {% block script %}{% endblock %}
 </head>
